--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ body {
     height: 100%;
     width: 100%;
     margin: 0;
-    gap: 10px;
+    gap: 5px;
 }
 
 a {
@@ -44,6 +44,10 @@ a {
     margin: 0 40px;
 }
 
+.navbar-logo {
+    animation: 0.5s ease-out 0s 1 slideFromLeft
+}
+
 .navbar-links > ul {
     display: flex;
     list-style-type: none;
@@ -59,12 +63,15 @@ a {
 }
 
 .hero-left {
+    background-position: center;
     text-align: center;
 }
 
 .hero-left-title {
+    background-image: url(images/dynamic-dna-gif.gif);
+    background-position: center;
     font-size: 100px;
-    color: green;
+    color: gold;
     text-shadow: 2px 2px 1px black;
 }
 
@@ -166,7 +173,7 @@ p span img {
 }
 
 .contact-title {
-    color: gold;
+    color: green;
 }
 
 .contact-subheading {
@@ -225,4 +232,37 @@ textarea {
     margin-top: 100px;
     color: white;
     text-align: center;
+}
+
+.hidden {
+    opacity: 0;
+    filter: blur(5px);
+    transform: translateY(30%);
+    transition: all 0.75s;
+}
+
+.show {
+    opacity: 1;
+    filter: blur(0);
+    transform: translateY(0);
+}
+
+@keyframes slideFromLeft {
+    0% {
+        filter: blur(5px);
+        transform: translateX(-100%);
+    }
+    100% {
+        filter: blur(0);
+        transform: translateX(0);
+    }
+}
+
+@keyframes blurIn {
+    0% {
+        filter: blue(5px); 
+    }
+    100% {
+        filter: blur(0);
+    }
 }
